# cookiecutter-uv

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  version_bump.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/prompts/: boost-prompt.prompt.md
.github/workflows/: main.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: linting.md
{{cookiecutter.project_name}}/: .gitignore  README.md
{{cookiecutter.project_name}}/.github/: copilot-instructions.md
{{cookiecutter.project_name}}/.github/agents/: CSharpExpert.agent.md  arch.agent.md  context7.agent.md
{{cookiecutter.project_name}}/.github/instructions/: python.instructions.md  sql.instructions.md
