[project]
name = "cookiecutter-uv"
version = "0.0.1"
description = "A python cookiecutter application to create a new python project that uses uv to manage its dependencies."
authors = [{ name = "Marcel Domingus", email = "domingus@xs4all.nl" }]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'uv']
requires-python = ">=3.12,<4.0"
dependencies = [
  "cookiecutter>=2.1.1"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]


[project.urls]
Repository = "https://github.com/mrjdomingus/cookiecutter-uv"
Documentation = "https://mrjdomingus.github.io/cookiecutter-uv/"
Homepage = "https://mrjdomingus.github.io/cookiecutter-uv/"

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
    "tox-uv>=1.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["cookiecutter_uv"]

[tool.setuptools.package-data]
"cookiecutter_uv" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["cookiecutter_uv"]

[tool.mypy]
files = ['cookiecutter_uv']
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.deptry]
extend_exclude = [
  ".+/test_foo.py"
]

[tool.deptry.per_rule_ignores]
DEP002 = ["cookiecutter"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
